--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
     "clsx": "^2.1.1",
-    "motion": "^12.9.2",
+    "framer-motion": "^12.16.0",
+    "motion": "^12.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
